client_react/src/components/ConversationWindow.css
/* Message Box */
.message-box
{
    min-width: 100px;
}

/* Member List */
.member-list
{
  
  color: rgb(90, 90, 90, 0.9);
  background-color: rgba(255, 255, 255, 0.2);
  backdrop-filter: blur(10px);
  direction: rtl;
  text-align: start;

  /* Truncate Text */
  white-space: nowrap;
  overflow: hidden;
}

.member-list:hover
{
  color: rgba(63, 63, 63, 1);
  white-space: wrap;
}


/* Conversation Window */
.conversation-window
{
  height: 100%;
  width: 100%;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
}

.messages-container
{
  height: 100%;
  overflow-y: scroll;
}

